--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles.css') }}">
     <title>Flask Form Example</title>
 </head>
 <body>
-    <h2>Submit Form to Flask</h2>
+    <h2>Don't understand some code? Get it explained here.</h2>
     <form action="/submit" method="post">
-        <label for="inputText">Enter Text:</label><br>
-        <input type="text" id="inputText" name="inputText"><br>
-        <input type="submit" value="Submit">
+        <label for="inputText">Paste Code:</label><br>
+        <textarea type="inputText" id="inputText" name="inputText" rows="4" cols="50"></textarea><br>
+        <input id="submitBtn" type="submit" value="Submit">
     </form>
+
+    <body>
+        <!-- Compressing bars component -->
+        <div class="bars-common bar-one"></div>
+        <div class="bars-common bar-two"></div>
+        <div class="bars-common bar-three"></div>
+
+        <!-- Rotating squares component -->
+        <div class="squares-common square-one"></div>
+        <div class="squares-common square-two"></div>
+    </body>
+
+    <div class="drop">
+    <div class="outer">
+        <button class="box">
+            Click me<br>while you wait
+        </button>
+    </div>
+    </div>
+    
+    
+    <div>SORRYf roe the waigt//?? not raealyy</div>
+    </div>
+            
+    
 </body>
+
+<style>
+    
+</style>
+
+<script>
+    const root = document.querySelector(':root');
+const btn = document.querySelectorAll('button');
+
+    btn.forEach(function(btn){
+        btn.addEventListener('click', function(){
+        if(root.style.getPropertyValue('--animation-time') == '3s'){
+            root.style.setProperty('--animation-time', '9s');
+        }else{
+            root.style.setProperty('--animation-time', '3s');
+        }
+    });
+    })
+    
+</script>
+
+
 </html>
+
