--- a/templates/index.html
+++ b/templates/index.html
@@ -34,10 +34,11 @@
                 <button class="box">
                     Click me<br>while you wait
                 </button>
+                {{passed_data}}
             </div>
             </div>
         
-        <div>SORRYf roe the waigt//?? not raealyy</div>
+        <div>Sorry for the wait :3</div>
     </div>
 
     
